# ExMachina2000-1

./: README.md  main.py  pyproject.toml  search.py  util.py
commands/: utils.py
data/: config.json  notify.json  remind.json
