[tool.poetry]
name = "repl_python3_ExMachina2000-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
flatten-json = "^0.1.13"
setproctitle = "^1.2.2"
ipython = "^7.25.0"
regex = "^2021.7.6"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
